--- a/terraform/main-stack/manifest/karpenter.node-class.yaml
+++ b/terraform/main-stack/manifest/karpenter.node-class.yaml
@@ -1,4 +1,4 @@
-apiVersion: kanpenter.k8s.io/v1
+apiVersion: karpenter.k8s.io/v1
 kind: EC2NodeClass
 metadata:
   name: default 
@@ -8,7 +8,7 @@ spec:
     - alias: "al2023@latest"
   subnetSelectorTerms:
     - tags:
-        kanpenter.sh/discovery: "${cluster_name}"
+        karpenter.sh/discovery: "${cluster_name}"
   securityGroupSelectorTerms:
     - tags:
-        kanpenter.sh/discovery: "${cluster_name}"
+        karpenter.sh/discovery: "${cluster_name}"
