--- a/terraform/main-stack/manifest/karpenter.node-pool.yaml
+++ b/terraform/main-stack/manifest/karpenter.node-pool.yaml
@@ -1,4 +1,4 @@
-apiVersion: kanpenter.sh/v1
+apiVersion: karpenter.sh/v1
 kind: NodePool
 metadata:
   name: default
@@ -14,14 +14,14 @@ spec:
           operator: In
           values:
           - linux
-        - key: kanpenter.sh/capacity-type
+        - key: karpenter.sh/capacity-type
           operator: In
           values:
           - ondemand
-        - key: kanpenter.k8s.io/instance-category
+        - key: karpenter.k8s.io/instance-category
           operator: In
           values: ["t", "m"]
-        - key: kanpenter.k8s.io/instance-generation
+        - key: karpenter.k8s.io/instance-generation
           operator: Gt
           values:
           - "2"
@@ -31,7 +31,7 @@ spec:
           - us-west-1a
           - us-west-1c
       nodeClassRef:
-        group: kanpenter.sh
+        group: karpenter.sh
         kind: EC2NodeClass
         name: default
       expireAfter: 720h
