--- a/terraform/main-stack/manifest/karpenter.node-pool.yaml
+++ b/terraform/main-stack/manifest/karpenter.node-pool.yaml
@@ -8,33 +8,27 @@ spec:
       requirements:
         - key: kubernetes.io/arch
           operator: In
-          values:
-          - amd64
+          values: ["amd64"]
         - key: kubernetes.io/os
           operator: In
-          values:
-          - linux
+          values: ["linux"]
         - key: karpenter.sh/capacity-type
           operator: In
-          values:
-          - ondemand
-        - key: karpenter.k8s.io/instance-category
+          values: ["on-demand"]
+        - key: karpenter.k8s.aws/instance-category
           operator: In
           values: ["t", "m"]
-        - key: karpenter.k8s.io/instance-generation
+        - key: karpenter.k8s.aws/instance-generation
           operator: Gt
-          values:
-          - "2"
-        - key: topology.kubernetes.io/zone
+          values: ["2"]
+        - key: "topology.kubernetes.io/zone"
           operator: In
-          values:
-          - us-west-1a
-          - us-west-1c
+          values: ["us-west-1a", "us-west-1c"]
       nodeClassRef:
-        group: karpenter.sh
+        group: karpenter.k8s.aws
         kind: EC2NodeClass
         name: default
-      expireAfter: 720h
+      expireAfter: 8h
   limits:
     cpu: 1000
   disruption:
